Connected app to MongoDB cluster

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
         <img src="graph.png" alt="placeholder">
       </div>
     </div>
-    <p>Your <%= fire %> years from retirement</p>
+    <p>Your <%= fire.ageDifference %> years from retirement</p>
 
     <script src="js/main.js"></script>
     <noscript>Sorry this website needs Javascript to run, please turn it on and refresh the page</noscript>
