--- a/views/results.ejs
+++ b/views/results.ejs
@@ -14,42 +14,42 @@
         <form class="calculator" action="/post" method="POST">
           <div class="parameter">
             <label for="current-age">Current age:</label>
-            <input type="number" name="current-age" value="23" placeholder="23" min="0">
+            <input type="number" name="current-age" value=<%= docObject.currentAge %> placeholder="23" min="0">
             <small></small>
           </div>
 
           <div class="parameter">
             <label for="retirement-age">Retirement age:</label>
-            <input type="number" name="retirement-age" value="65" placeholder="65" min="1">
+            <input type="number" name="retirement-age" placeholder="65" min="1" value=<%= docObject.currentAge %>>
             <small></small>
           </div>
 
           <div class="parameter">
             <label for="annual-spend">Annual spending in retirement:</label>
-            <input type="number" name="annual-spend" value="30000" placeholder="30000" min="1">
+            <input type="number" name="annual-spend" placeholder="30000" min="1" value=<%= docObject.annualSpend %>>
             <small></small>
           </div>
 
           <div class="parameter">
             <label for="current-assets">Current invested assets:</label>
-            <input type="number" name="current-assets" value="0" placeholder="0" min="0">
+            <input type="number" name="current-assets" placeholder="0" min="0" value=<%= docObject.currentAssets %>>
           </div>
 
           <div class="parameter">
             <label for="monthly-contribution">Monthly contribution:</label>
-            <input type="number" name="monthly-contribution" value="500" placeholder="500" min="0">
+            <input type="number" name="monthly-contribution" placeholder="500" min="0" value=<%= docObject.monthlyContribution %>>
           </div>
 
           <!--Replace the growth and interest rate with range input in future-->
           <!--Current value of the slider will be shown to the user-->
           <div class="parameter">
             <label for="growth-rate">Investment growth rate:</label>
-            <input type="number" name="growth-rate" value="7.0" placeholder="7.0" min="-100" max="100">
+            <input type="number" name="growth-rate" placeholder="7.0" min="-100" max="100" value=<%= docObject.growthRate %>>
           </div>
 
           <div class="parameter">
             <label for="interest-rate">Interest rate:</label>
-            <input type="number" name="interest-rate" value="3.0" placeholder="3.0" min="-100" max="100">
+            <input type="number" name="interest-rate" placeholder="3.0" min="-100" max="100" value=<%= docObject.interestRate %>>
           </div>
 
           <!--Replace Submit button with "Years to FIRE" when convert to React-->
@@ -74,6 +74,7 @@
     <p><%= docObject.coastNumber %></p>
 
     <p>Monthly contributions: <%= docObject.monthlyContribution %></p>
+
     <script src="js/main.js"></script>
     <noscript>Sorry this website needs Javascript to run, please turn it on and refresh the page</noscript>
   </body>
