--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self';"/>
     <title>FIRE Calculator AUS</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body>
     <div class="calculator-box">
@@ -31,8 +31,8 @@
           </div>
 
           <div class="parameter">
-            <label for="current-assets">Current invested assets:</label>
-            <input type="number" name="current-assets" value="0" placeholder="0" min="0">
+            <label for="current-super">Current Super value:</label>
+            <input type="number" name="current-super" value="0" placeholder="0" min="0">
           </div>
 
           <div class="parameter">
@@ -44,12 +44,12 @@
           <!--Current value of the slider will be shown to the user-->
           <div class="parameter">
             <label for="growth-rate">Investment growth rate:</label>
-            <input type="number" name="growth-rate" value="7.0" placeholder="7.0" min="-100" max="100">
+            <input type="number" name="growth-rate" value="7.0" placeholder="7.0" min="-100" max="100" step="0.5">
           </div>
 
           <div class="parameter">
             <label for="interest-rate">Interest rate:</label>
-            <input type="number" name="interest-rate" value="3.0" placeholder="3.0" min="-100" max="100">
+            <input type="number" name="interest-rate" value="3.0" placeholder="3.0" min="-100" max="100" step="0.5">
           </div>
 
           <!--Replace Submit button with "Years to FIRE" when convert to React-->
