--- a/views/results.ejs
+++ b/views/results.ejs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self';"/>
     <title>FIRE Calculator AUS</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- For some reason without base, ejs interprets the css as a html file -->
+    <base href="/">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
     <div class="calculator-box">
@@ -20,7 +22,7 @@
 
           <div class="parameter">
             <label for="retirement-age">Retirement age:</label>
-            <input type="number" name="retirement-age" placeholder="65" min="1" value=<%= docObject.currentAge %>>
+            <input type="number" name="retirement-age" placeholder="65" min="1" value=<%= docObject.retirementAge %>>
             <small></small>
           </div>
 
@@ -31,8 +33,8 @@
           </div>
 
           <div class="parameter">
-            <label for="current-assets">Current invested assets:</label>
-            <input type="number" name="current-assets" placeholder="0" min="0" value=<%= docObject.currentAssets %>>
+            <label for="current-super">Current Super value:</label>
+            <input type="number" name="current-super" placeholder="0" min="0" value=<%= docObject.currentSuper %>>
           </div>
 
           <div class="parameter">
@@ -44,12 +46,12 @@
           <!--Current value of the slider will be shown to the user-->
           <div class="parameter">
             <label for="growth-rate">Investment growth rate:</label>
-            <input type="number" name="growth-rate" placeholder="7.0" min="-100" max="100" value=<%= docObject.growthRate %>>
+            <input type="number" name="growth-rate" placeholder="7.0" min="-100" max="100" step="0.5" value=<%= docObject.growthRate %>>
           </div>
 
           <div class="parameter">
             <label for="interest-rate">Interest rate:</label>
-            <input type="number" name="interest-rate" placeholder="3.0" min="-100" max="100" value=<%= docObject.interestRate %>>
+            <input type="number" name="interest-rate" placeholder="3.0" min="-100" max="100" step="0.5" value=<%= docObject.interestRate %>>
           </div>
 
           <!--Replace Submit button with "Years to FIRE" when convert to React-->
@@ -57,13 +59,13 @@
         </form>
       </div>
       <div class="graph-box">
-
+        <img src="graph.png" alt="placeholder">
       </div>
     </div>
 
     <p>Your <%= docObject.ageDifference %> years from retirement</p>
     <p>
-      At a real growth rate (growth - inflation) of <%= docObject.adjustedGrowthRate * 100 %>%
+      At a real growth rate (growth - inflation) of <%= docObject.adjustedGrowthRate %>%
       and a planned annual spendings of <%= docObject.annualSpend %> this makes your
       FIRE number: <%= docObject.fireNumber %>
     </p>
